--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,64 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,
+html {
   color: #8f8f8f;
   background: #121214;
+}
+
+.pomoTimer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  -webkit-box-shadow: 0px 0px 20px 10px black;
+  box-shadow: 0px 0px 50px 20px black;
+}
+
+.circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  background-color: #00e0ff;
+  box-shadow: 0px 0px 50px 5px #00e1ff2a;
+  position: relative;
+}
+
+.circle::before {
+  content: "";
+  position: absolute;
+  width: 95%;
+  height: 95%;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.time {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+
+.time p {
+  font-size: 3.3rem;
+  color: white;
+  font-weight: 400;
+}
+
+.time p:nth-of-type(2) {
+  position: relative;
+  top: -0.5rem;
+  margin-inline: 1rem;
 }
