--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@ html {
   margin: 2rem;
 }
 
+.progress-ring {
+  box-shadow: 0px 4px 50px 21px #000;
+}
+
 .progress-ring-progress {
   transition: stroke-dashoffset 0.5s;
 }
